Experiment with dependency checksum pinning (#44)
- Migrates workflows to use Temurin
- Adds dependency checksums
- Configures workflow to update checksums in case of Renovate PRs
- Sets Renovate to sign-off-commits
- Adds debug options for dependency verification
- Fixes metadata sources
- Upgrade to Java 11
- Ignore module files form verification metadata

{major}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>